--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501220658">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230517223232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 					<a href="home.html" class="top-header__logo"><img src="img/Logo.svg" alt="logo"></a>
 					<div data-da=".menu__body,550,0" class="top-header__search search-header">
 						<div class="search-header__field">
-							<input class="search-header__input input" type="search" name="search" id="search" placeholder="Я шукаю..." autocomplete="off">
+							<input class="search-header__input search-field input" type="search" name="search" id="search" placeholder="Я шукаю..." autocomplete="off">
 							<button type="submit" class="search-header__btn _icon-search"></button>
 						</div>
 						<div id="search-results" class="search-header__result result-search">
@@ -218,7 +218,7 @@
 						<article class="popular-page__card product-card _stock-out">
 							<div class="product-card__body">
 								<a href="#" class="product-card__image-ibg">
-									<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
+									<picture><source data-srcset="img/product/termostat.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/termostat.jpg" alt="photo"></picture>
 								</a>
 								<div class="product-card__code code-product">
 									<div class="code-product__item">Код:</div>
@@ -548,7 +548,7 @@
 										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :)</div>
 									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-									<div class="body-response__emoji-cool cool-emoji">
+									<!-- <div class="body-response__emoji-cool cool-emoji">
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Гарне
 													обслуговування</span></div>
@@ -576,7 +576,7 @@
 											<label class="checkbox__label"><span class="checkbox__text">Ціна вище
 													зазначеної</span></label>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="response__slide swiper-slide">
@@ -608,7 +608,7 @@
 										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :) </div>
 									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-									<div class="body-response__emoji-cool cool-emoji">
+									<!-- <div class="body-response__emoji-cool cool-emoji">
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Гарне
 													обслуговування</span></div>
@@ -638,7 +638,7 @@
 											<div class="checkbox__label"><span class="checkbox__text">Актуальна
 													ціна</span></div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="response__slide swiper-slide">
@@ -669,7 +669,7 @@
 									<div class="body-response__text"></div>
 									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-									<div class="body-response__emoji-cool cool-emoji">
+									<!-- <div class="body-response__emoji-cool cool-emoji">
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Гарне
 													обслуговування</span></div>
@@ -686,7 +686,7 @@
 											<div class="checkbox__label"><span class="checkbox__text">Товар був у
 													наявності</span></div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="response__slide swiper-slide">
@@ -718,7 +718,7 @@
 										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :) </div>
 									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-									<div class="body-response__emoji-cool cool-emoji">
+									<!-- <div class="body-response__emoji-cool cool-emoji">
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Гарне
 													обслуговування</span></div>
@@ -742,11 +742,13 @@
 										</div>
 									</div>
 									<div class="body-response__emoji-negative negative-emoji">
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
 					</div>
+
+
 					<a href="response.html" class="response__btn button button--border-blue _icon-arrow">Дивитися усі</a>
 					<div class="response__arrows">
 						<button type="button" class="response__prev arrow _icon-arrow"></button>
@@ -1636,7 +1638,7 @@
 				<div class="popup-order">
 					<div class="popup-order__title title title--blue">Замовити товар</div>
 
-					<form data-goto-error data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
+					<form data-goto-error data-dev data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
 						<a href="#" class="form-order__image">
 							<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
 						</a>
@@ -1695,7 +1697,7 @@
 			<div class="popup__content">
 				<button data-close type="button" class="popup__close _icon-x"></button>
 				<div class="popup-selection">
-					<form data-goto-error data-popup-message="#popup-selection-confirmation" class="popup-selection__form form-selection" action="#" method="POST">
+					<form data-goto-error data-dev data-popup-message="#popup-selection-confirmation" class="popup-selection__form form-selection" action="#" method="POST">
 						<div class="form-selection__title title title--blue">Підбір запчастин</div>
 						<div class="form-selection__line form-line">
 							<label for="vin" class="form-line__label">Ведіть
@@ -1754,7 +1756,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501220658"></script>
+	<script src="js/app.min.js?_v=20230517223232"></script>
 </body>
 
 </html>
