--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230504204041">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230517223232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -258,7 +258,7 @@
 							</div>
 						</div>
 					</div>
-					<form data-goto-error data-popup-message="#response-confirmation" action="files/sendmail/sendmail.php" method="POST" class="informations__response response-informations">
+					<form data-goto-error data-dev data-popup-message="#response-confirmation" action="files/sendmail/sendmail.php" method="POST" class="informations__response response-informations">
 						<div class="response-informations__title">Написати відгук</div>
 						<div class="response-informations__subtitle">Оцінка</div>
 						<div class="response-informations__rating rating rating_set">
@@ -1887,7 +1887,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230504204041"></script>
+	<script src="js/app.min.js?_v=20230517223232"></script>
 </body>
 
 </html>
