--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230504204041">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230517223232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -202,7 +202,7 @@
 							<article class="catalog-products__card product-card _stock-in">
 								<div class="product-card__body">
 									<a href="card.html" class="product-card__image-ibg">
-										<picture><source data-srcset="img/product/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_3.jpg" alt="photo"></picture>
+										<picture><source data-srcset="img/product/neoriginalnye-zapchasti-chevrolet.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/neoriginalnye-zapchasti-chevrolet.png" alt="photo"></picture>
 									</a>
 									<div class="product-card__code code-product">
 										<div class="code-product__item">Код:</div>
@@ -228,7 +228,7 @@
 								</div>
 							</article>
 
-							<article class="catalog-products__card product-card _stock-out">
+							<!-- <article class="catalog-products__card product-card _stock-out">
 								<div class="product-card__body">
 									<a href="#" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
@@ -304,9 +304,9 @@
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
 								</div>
-							</article>
+							</article> -->
 
-							<article class="catalog-products__card product-card _stock-out">
+							<!-- <article class="catalog-products__card product-card _stock-out">
 								<div class="product-card__body">
 									<a href="#" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/Screenshot_2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_2.jpg" alt="photo"></picture>
@@ -357,9 +357,9 @@
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
 								</div>
-							</article>
+							</article> -->
 
-							<article class="catalog-products__card product-card _stock-in">
+							<!-- <article class="catalog-products__card product-card _stock-in">
 								<div class="product-card__body">
 									<a href="#" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/Screenshot_3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/Screenshot_3.jpg" alt="photo"></picture>
@@ -385,9 +385,9 @@
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
 								</div>
-							</article>
+							</article> -->
 
-							<article class="catalog-products__card product-card _stock-out">
+							<!-- <article class="catalog-products__card product-card _stock-out">
 								<div class="product-card__body">
 									<a href="#" class="product-card__image-ibg">
 										<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo"></picture>
@@ -539,7 +539,7 @@
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
 								</div>
-							</article>
+							</article> -->
 						</div>
 					</div>
 				</div>
@@ -1443,7 +1443,7 @@
 				<div class="popup-order">
 					<div class="popup-order__title title title--blue">Замовити товар</div>
 
-					<form data-goto-error data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
+					<form data-goto-error data-dev data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
 						<a href="#" class="form-order__image">
 							<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
 						</a>
@@ -1497,7 +1497,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230504204041"></script>
+	<script src="js/app.min.js?_v=20230517223232"></script>
 </body>
 
 </html>
