--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230504204041">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230517223232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1236,7 +1236,7 @@
 				<div class="popup-order">
 					<div class="popup-order__title title title--blue">Замовити товар</div>
 
-					<form data-goto-error data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
+					<form data-goto-error data-dev data-popup-message="#order-confirmation" action="#" method="POST" class="popup-order__form form-order">
 						<a href="#" class="form-order__image">
 							<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
 						</a>
@@ -1290,7 +1290,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230504204041"></script>
+	<script src="js/app.min.js?_v=20230517223232"></script>
 </body>
 
 </html>
